# envy

./: .gitignore  CLAUDE.md  CORRUPTION.md  IDEAS.md  PROBLEM.md  README.md  envy.py  generate.py  main.py  pyproject.toml  sandbox.Dockerfile  sandbox.toml  test.py
